# cat-tracker

./: .dockerignore  Dockerfile  README.md  dev-layout.kdl  docker-compose.yml  justfile
.github/workflows/: backend.yml  tests.yml
backend/: .gitignore  Cargo.toml  sqlx-data.json
backend/migrations/: 20221018164947_init.sql
backend/src/: auth.rs  db.rs  docs.rs  errors.rs  frontend.rs  main.rs
backend/src/routes/: accounts.rs  keys.rs  mod.rs  reports.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  profile.ts  setupProxy.js
frontend/src/pages/: Data.json  Header.tsx  Home.css  Home.tsx  Layout.tsx  NoPage.tsx  Other.tsx  UserAuth.tsx
frontend/src/pages/Account/: AccountSettings.tsx
frontend/src/pages/Auth/: Login.tsx  Register.tsx
frontend/src/pages/Map/: Map.tsx  MapHeader.css  MapHeader.tsx  Markers.tsx  mapStylesheet.ts  settings.ts
frontend/src/pages/Reports/: ReportsButton.tsx
frontend/src/tests/: Home.test.tsx
thunder-tests/: thunderCollection.json  thunderclient.json
