[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# http server
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }

# documentation
utoipa = { version = "2.4", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "3.0", features = ["axum"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"

# security
argon2 = "0.4"
jsonwebtoken = "8.1"
rand = "0.8"

# database
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "offline", "time"] }

# encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }

# utility
dotenv = "0.15"
thiserror = "1.0"
once_cell = "1.15"
